[tool.poetry]
name = "pyopenweathermap"
version = "0.0.5"
description = "lib for OpenWeatherMap for Home Assistant"
authors = ["Evgeny <iam@freekode.org>"]
license = "MIT"
readme = "README.md"
keywords = ["homeassistant", "owm", "openweathermap"]
packages = [
    { include = "pyopenweathermap", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
pydantic = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
